Fix background color on mobile

--- a/app/static/site.css
+++ b/app/static/site.css
@@ -11,6 +11,7 @@ section {
 }
 
 .card,
+.navbar-menu,
 .dropdown-content,
 .dropdown-item,
 .footer {
